--- a/assets/styles/keyframes.css
+++ b/assets/styles/keyframes.css
@@ -424,3 +424,38 @@
     rotate: -360deg;
   }
 }
+
+@keyframes bg-scale-1 {
+  0% {
+    transform: scale(1.0);
+  }
+  50% {
+    transform: scale(1.15);
+  }
+  100% {
+    transform: scale(1.0);
+  }
+}
+
+@keyframes others-title-shadow {
+  0% {
+    filter: drop-shadow(-6px 6px #524dc080)
+          drop-shadow(-10px 10px #524dc040);
+  }
+  25% {
+    filter: drop-shadow(-6px 6px #524dc080)
+          drop-shadow(-10px 10px #524dc040);
+  }
+  50% {
+    filter: drop-shadow(6px 6px #524dc080)
+          drop-shadow(10px 10px #524dc040);
+  }
+  75% {
+    filter: drop-shadow(6px 6px #524dc080)
+          drop-shadow(10px 10px #524dc040);
+  }
+  100% {
+    filter: drop-shadow(-6px 6px #524dc080)
+          drop-shadow(-10px 10px #524dc040);
+  }
+}
