--- a/assets/styles/keyframes.css
+++ b/assets/styles/keyframes.css
@@ -437,6 +437,18 @@
   }
 }
 
+@keyframes bg-scale-2 {
+  0% {
+    transform: scale(1.0);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1.0);
+  }
+}
+
 @keyframes others-title-shadow {
   0% {
     filter: drop-shadow(-6px 6px #524dc080)
