--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1415,7 +1415,6 @@ section {
   justify-content: center;
   width: 100%;
   position: relative;
-  background: white;
   flex-direction: column;
   gap: 48px;
 }
@@ -1430,7 +1429,6 @@ section {
 
 .others-advantage-card-wrapper {
   width: 100%;
-  background: wheat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1440,7 +1438,6 @@ section {
   width: 100%;
   max-width: 1080px;
   padding-inline: 32px;
-  background: lightgreen;
 }
 
 .others-advantage-card {
@@ -1451,7 +1448,6 @@ section {
   gap: 16px;
   align-items: center;
   justify-content: center;
-  background: lightsalmon;
 }
 
 .others-advantage-card-wrapper:nth-child(4n - 3) .others-advantage-card {
@@ -1480,10 +1476,6 @@ section {
   width: 100%;
 }
 
-.others-advantage-img-ctn > span:nth-child(1) {
-  background: wheat;
-}
-
 .others-advantage-card > p {
   display: block;
   height: max-content;
@@ -1491,6 +1483,10 @@ section {
   padding-block: 12px;
   width: 100%;
   background: lightcoral;
+}
+
+.others-advantage-img-ctn > span:nth-last-of-type(1),
+.others-advantage-card > p {
   box-shadow: inset -4px 4px 4px #fff2,
               inset 2px -2px 2px #0002;
 }
@@ -1502,6 +1498,32 @@ section {
 .others-advantage-card-wrapper:nth-child(even) .others-advantage-card > p {
   border-radius: 1000px 0 1000px 1000px;
 }
+
+.others-advantage-card-wrapper:nth-child(5n - 4) .others-advantage-img-ctn > span:nth-of-type(1),
+.others-advantage-card-wrapper:nth-child(5n - 4) .others-advantage-card > p {
+  background: var(--clr-1-a);
+}
+
+.others-advantage-card-wrapper:nth-child(5n - 3) .others-advantage-img-ctn > span:nth-of-type(1),
+.others-advantage-card-wrapper:nth-child(5n - 3) .others-advantage-card > p {
+  background: var(--clr-2-a);
+}
+
+.others-advantage-card-wrapper:nth-child(5n - 2) .others-advantage-img-ctn > span:nth-of-type(1),
+.others-advantage-card-wrapper:nth-child(5n - 2) .others-advantage-card > p {
+  background: var(--clr-3-a);
+}
+
+.others-advantage-card-wrapper:nth-child(5n - 1) .others-advantage-img-ctn > span:nth-of-type(1),
+.others-advantage-card-wrapper:nth-child(5n - 1) .others-advantage-card > p {
+  background: var(--clr-4-a);
+}
+
+.others-advantage-card-wrapper:nth-child(5n - 0) .others-advantage-img-ctn > span:nth-of-type(1),
+.others-advantage-card-wrapper:nth-child(5n - 0) .others-advantage-card > p {
+  background: var(--clr-5-a);
+}
+
 
 .footer {
   min-height: max-content;
